fixed issue with photos overlaping on smaller screens

--- a/food.css
+++ b/food.css
@@ -1,13 +1,16 @@
 .grid-container {
-    display: grid;
-    grid-template-columns: 2% 2% ;
-    padding: 5px;
-    justify-items: center;
-    justify-content: space-evenly;
-  }
-  .grid-item {  
-    padding: 5px;
-  }
+  display: grid;
+  grid-template-columns: 25% 25%;
+  padding: 5px;
+  justify-items: center;
+  justify-content: space-evenly;
+  grid-column-gap: 50px;
+  grid-row-gap: 15px;
+}
+.grid-item {  
+  padding: 15px;
+  font-size: 15px;
+}
   h3{
       text-align: center;
       color: black;
